@@ -67,7 +67,7 @@ because a primitive mirror has no legitimate `cachedConstructor` reader at all.
 
   | class | slot | writes | real desc | n |
   |---|---:|---|---|---:|
-  | `java/util/HashMap` | 1 | `Int` | `L` | 4,395 |
+  | ~~`java/util/HashMap`~~ | ~~1~~ | ~~`Int`~~ | ~~`L`~~ | **FIXED 2026-08-05** — 8,342 → 0, the largest row in this table |
   | `java/util/HashMap$Node` | 2 | `Int` | `L` | 2,108 |
   | ~~`java/lang/invoke/VarHandle`~~ | ~~1~~ | ~~`Object`~~ | ~~`Z`~~ | **FIXED** |
   | ~~`java/lang/invoke/VarHandle`~~ | ~~0~~ | ~~`Int`~~ | ~~`L`~~ | **FIXED** |
@@ -105,9 +105,47 @@ because a primitive mirror has no legitimate `cachedConstructor` reader at all.
   > named under `Properties` below are attributed to L2, each A/B'd on the
   > same workload against the pre-fix binary.
 
-  * The **`HashMap` family is the known-benign case** the hunter suppresses by
-    default — coercion-to-null lands the real bytecode in the null-initialised
-    state it expects. It dominates by volume and says nothing.
+  * ~~The **`HashMap` family is the known-benign case**~~ — **half true, and
+    the half that was false was the expensive half. FIXED 2026-08-05.**
+    Coercion-to-null does land the real bytecode in the null-initialised state
+    it expects, which is why slot 1 (`AbstractMap.values`) was harmless in
+    OUTCOME. What that reasoning hid is the slot NEXT to it: the same
+    fabricated model puts the bucket array in slot 0, `AbstractMap.keySet` —
+    reference over reference, so no census could ever report it, and no
+    coercion made it benign.
+
+    `probes/MapModelSlotProbe` reads the field reflectively under
+    `--add-opens java.base/java.util=ALL-UNNAMED` and settled it against
+    HotSpot 25.0.3+9:
+
+    | | HotSpot | CratonVM (pre-fix) |
+    |---|---|---|
+    | `keySet` on a fresh/filled/copied/sized map | `null` | `ARRAY[Object]` |
+    | after `keySet()` was called | `HashMap$KeySet` | still `ARRAY[Object]` |
+    | `values` | `null` | `null` (the coercion — genuinely benign) |
+
+    The second row is the failure mode: real `HashMap.keySet()` is
+    `if (ks == null) ks = new KeySet(); return ks`, so a non-null bucket array
+    short-circuits the lazy init and hands the caller an `Object[]` where a
+    `Set` is required. It never faulted because the natives shadow every
+    reader — the same conditional safety `VarHandle` had, and item 3/7 is in
+    the business of removing that shadow.
+
+    Fixed in `fix/map-model-slots-on-real-layout-20260805`: `map_buckets_slot`
+    and `map_size_slot` answer "where does THIS receiver keep its table / its
+    count", and read and write both go through them, so they cannot drift. The
+    slot-1 row went 8,342 → 0, `keySet` is `null` on every probe row, the
+    `test_classes` corpus is byte-identical in `Compatible` mode, and
+    `bench/HashMapOnly` at n=5M shows no regression (median 2956 → 2940 ms,
+    min 2872 → 2575) because the change also removes a by-NAME class lookup
+    per size access.
+
+    **The lesson generalises past this row.** "Benign by coercion" is a claim
+    about one slot's value kind, and it was used to wave off a whole family;
+    the adjacent slot in the same model had no coercion to make it benign and
+    no instrument that could see it. When a model is written over a real
+    layout, ask what EVERY slot of the model lands on — `javap -p` and a
+    reflective probe, not the census.
   * **`VarHandle` — FIXED 2026-08-04, and it was the worst of the set.** It
     mismatched in *both* directions on adjacent slots (`Int` over a reference at
     0, an `Object` over a `boolean` at 1). The frames say why that mattered:
@@ -399,9 +437,38 @@ because a primitive mirror has no legitimate `cachedConstructor` reader at all.
     `InputStreamReader` / `OutputStreamWriter` slot 0, `java/lang/reflect/Field`
     / `Method` / `Constructor` slots 1/3/4/6, and `Collections$SingletonMap`
     0/1. Each is its own change with its own A/B, and the list is this lane's
-    output. **`ThreadGroup`, `java/lang/Thread` and
-    `java/security/ProtectionDomain` are FIXED (2026-08-05); the rest are
-    open.**
+    output. **Seven of the twelve are FIXED (2026-08-05)** — `ThreadGroup`,
+    `java/lang/Thread`, `java/security/ProtectionDomain`,
+    `java/security/CodeSource`, `java/io/BufferedReader`,
+    `java/io/BufferedWriter` and `java/util/Collections$SingletonMap`. Five
+    remain, and they are the ones that are not model rotations; see
+    [§What is left](#what-is-left-and-why-each-one-is-not-a-rotation).
+
+    ### The fourth batch — four more rotations, one root cause each
+
+    * **`CodeSource`** repeated `ProtectionDomain`'s mistake in the class next
+      to it: model `(location, certs)`, the `CodeSource(URL, Certificate[])`
+      constructor order, against a declared `location, signers, certs, …`. Slot
+      0 is `location` either way, which is why the dozen raw
+      `get_field(cs, 0)` readers scattered across the tree were all correct and
+      only slot 1 was wrong. Two raw slot-1 writes went by-name with it.
+    * **`BufferedReader`** and **`BufferedWriter`** named the wrapped stream at
+      index 0, where `java.io.Reader` puts `lock` and `java.io.Writer` puts
+      `writeBuffer`. Both are at index 2.
+    * **`Collections$SingletonMap`** named `k`/`v` at 0/1, where `AbstractMap`
+      puts `keySet`/`values`.
+
+    All four are model-only: every writer already went by name. One test now
+    pins all six corrected models against the JDK's declaration order in one
+    place, so the family cannot drift back one class at a time.
+
+    ### What is left, and why each one is not a rotation
+
+    | class | why it is not just a reorder |
+    |---|---|
+    | `java/io/InputStreamReader`, `OutputStreamWriter` | the model names `in`/`out`, which the real classes **do not declare at all** — the wrapped stream lives inside `sd:StreamDecoder` / `se:StreamEncoder`. Kind 3 or 4, and `servlet.rs` has raw slot-0 consumers gated to synthetic mode. |
+    | `java/lang/reflect/Field`, `Method`, `Constructor` | the models are the real layouts minus the inherited `AccessibleObject`/`Executable` fields, so everything from index 1 shifts — across **58 raw slot accesses**, and `MockNativeContext`'s `mock_jdk_field_slot` encodes a **third** mapping that agrees with neither. |
+    | `java/io/BufferedWriter` slot 0 (separate from its model) | `Files.newBufferedWriter` parks an fd `Int` there, i.e. in `Writer.writeBuffer`, and `bw_delegate_out` uses that slot's *value* as a layout discriminator. Kind 3 — wants a side table. Filed as [files-newbufferedwriter-parks-an-fd-in-writebuffer.md](files-newbufferedwriter-parks-an-fd-in-writebuffer.md). |
 
     ### The third worked example — `ProtectionDomain`, and what the mock hid
 
